--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,16 @@ layout: compress
 <!doctype html>
 <html lang="{{ site.locale | slice: 0,2 }}" class="no-js">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-250937369-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-250937369-1');
+    </script>
+
     {% include head.html %}
     {% include head/custom.html %}
   </head>
